Added a simple entity component system, from here https://github.com/carlbirch/BirchEngine/tree/master/BirchEngine/Src/ECS

--- a/Cangen/Cangen.vcxproj
+++ b/Cangen/Cangen.vcxproj
@@ -131,11 +131,13 @@
   <ItemGroup>
     <ClCompile Include="CApplication.cpp" />
     <ClCompile Include="CRenderer.cpp" />
+    <ClCompile Include="ECS.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CApplication.h" />
     <ClInclude Include="CRenderer.h" />
+    <ClInclude Include="ECS.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
